# pa4

pa4/: .history  README.md  poly.cabal
pa4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pa4/src/: Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
