cabal-version:       3.4
name:                poly
version:             0.1.0.1
license:             MIT
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md

executable poly
  build-depends:       
      base          >= 4.17  && <4.18
    , pretty        >= 1.1   && <1.2
    , parsec        >= 3.1   && <3.2
    , text          >= 1.2   && <1.3
    , containers    >= 0.5
    , mtl           >= 2.2 
    , transformers  >= 0.4.2
    , repline       >= 0.1.2.0
    , QuickCheck    >=2.14

  other-modules:
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type

  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
